--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -278,7 +278,8 @@ h1
 
 .weatherwidget-io{
     margin: 10px auto;
-    display: -webkit-inline-flex;
+    /*display: -webkit-inline-flex;*/
+
 
 }
 
@@ -288,4 +289,8 @@ h1
         margin: 10px auto;
         display:block;
     }
+}
+
+.topnav{
+    z-index: 999;
 }
